# pin-s

./: README.md  package.json
.github/workflows/: release.yml
.superpowers/brainstorm/2347-1781112875/content/: visual-style.html
.superpowers/brainstorm/2347-1781112875/state/: server-info  server-stopped
docs/: 01-产品项目整体描述.md  04-v0.3-窗口拖拽与新建修复需求文档.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  window_manager.rs
zhijian-app/: README.md  main.js  package.json  preload.js
zhijian-app/renderer/: index.html
zhijian-app/zhijian-tauri-app/: package.json
zhijian-app/zhijian-tauri-app/docs/: 02-已实现功能与产品功能架构.md
zhijian-app/zhijian-tauri-app/src-tauri/: tauri.conf.json
zhijian-app/zhijian-tauri-app/src-tauri/src/: note.rs  window_manager.rs
zhijian-tauri-app/: README.md
zhijian-tauri-app/.github/workflows/: release.yml
zhijian-tauri-app/docs/: 03-v0.2-条目拖拽排序小版本需求文档.md
zhijian-tauri-app/src/: index.html
zhijian-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
zhijian-tauri-app/src-tauri/icons/: README.md
zhijian-tauri-app/src-tauri/src/: main.rs  note.rs  window_manager.rs
